--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Sales Order Extension App
+appTitle=Sales Order App
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
