--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,4 +6,4 @@
 appTitle=Sales Order App
 
 #YDES: Application description
-appDescription=An SAP Fiori application.
+appDescription=This is the description.
